k8s/base/06-infra-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka
  namespace: ceiba-bar
spec:
  ports:
    - port: 8762
      targetPort: 8762
      name: http
  selector:
    app: eureka
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
  namespace: ceiba-bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: eureka:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8762
              name: http
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8762
            initialDelaySeconds: 150
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 50
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8762
            initialDelaySeconds: 180
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 50
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: ceiba-bar
spec:
  ports:
    - port: 8090
      targetPort: 8090
      name: http
  selector:
    app: gateway
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: ceiba-bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8090
              name: http
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8090
            initialDelaySeconds: 150
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 50
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8090
            initialDelaySeconds: 180
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 50
