k8s/base/07-microservices.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuarios
  namespace: ceiba-bar
spec:
  ports:
    - port: 8089
      targetPort: 8089
  selector:
    app: usuarios
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios
  namespace: ceiba-bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usuarios
  template:
    metadata:
      labels:
        app: usuarios
    spec:
      containers:
        - name: usuarios
          image: usuarios:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8089
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8089
            initialDelaySeconds: 150
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 50
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8089
            initialDelaySeconds: 180
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 50
---
apiVersion: v1
kind: Service
metadata:
  name: customer
  namespace: ceiba-bar
spec:
  ports:
    - port: 8088
      targetPort: 8088
  selector:
    app: customer
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
  namespace: ceiba-bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
        - name: customer
          image: customer:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8088
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8088
            initialDelaySeconds: 150
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 50
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8088
            initialDelaySeconds: 180
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 50
---
apiVersion: v1
kind: Service
metadata:
  name: drivers
  namespace: ceiba-bar
spec:
  ports:
    - port: 8096
      targetPort: 8096
  selector:
    app: drivers
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drivers
  namespace: ceiba-bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drivers
  template:
    metadata:
      labels:
        app: drivers
    spec:
      containers:
        - name: drivers
          image: drivers:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8096
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8096
            initialDelaySeconds: 150
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 50
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8096
            initialDelaySeconds: 180
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 50
---
apiVersion: v1
kind: Service
metadata:
  name: productos
  namespace: ceiba-bar
spec:
  ports:
    - port: 8087
      targetPort: 8087
  selector:
    app: productos
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productos
  namespace: ceiba-bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productos
  template:
    metadata:
      labels:
        app: productos
    spec:
      containers:
        - name: productos
          image: productos:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8087
          volumeMounts:
            - name: product-images-vol
              mountPath: /app/uploads/images
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8087
            initialDelaySeconds: 150
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 50
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8087
            initialDelaySeconds: 180
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 50
      volumes:
        - name: product-images-vol
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: payments
  namespace: ceiba-bar
spec:
  ports:
    - port: 8075
      targetPort: 8075
  selector:
    app: payments
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  namespace: ceiba-bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: payments:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8075
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8075
            initialDelaySeconds: 150
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 50
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8075
            initialDelaySeconds: 180
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 50
---
apiVersion: v1
kind: Service
metadata:
  name: realtime
  namespace: ceiba-bar
spec:
  ports:
    - port: 8099
      targetPort: 8099
  selector:
    app: realtime
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realtime
  namespace: ceiba-bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realtime
  template:
    metadata:
      labels:
        app: realtime
    spec:
      containers:
        - name: realtime
          image: realtime:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8099
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8099
            initialDelaySeconds: 150
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 50
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8099
            initialDelaySeconds: 180
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 50
