k8s/base/08-frontends.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-angular
  namespace: ceiba-bar
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: frontend-angular
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-angular
  namespace: ceiba-bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-angular
  template:
    metadata:
      labels:
        app: frontend-angular
    spec:
      containers:
        - name: frontend-angular
          image: frontend-angular:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-nextjs
  namespace: ceiba-bar
spec:
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app: frontend-nextjs
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-nextjs
  namespace: ceiba-bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-nextjs
  template:
    metadata:
      labels:
        app: frontend-nextjs
    spec:
      containers:
        - name: frontend-nextjs
          image: frontend-nextjs:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
